--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Etch a sketch</title>
 </head>
 <body>
+    
     <div class="container"></div>
+    <button class="grid">Change grid</button>
 <script src="script.js"></script>
 </body>
 </html>
