Create button that reset the grid

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container"></div>
-    <button class="grid">Change grid</button>
+    <button class="grid-size">Change grid size</button>
+    <button class="grid-reset">Reset grid </button>
+    
 <script src="script.js"></script>
 </body>
 </html>
