Create a random color button Default black, if select 'change color' a random color will appear.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="container"></div>
     <button class="grid-size">Change grid size</button>
     <button class="grid-reset">Reset grid </button>
+    <button class="color-change">Change color</button>
     
 <script src="script.js"></script>
 </body>
